# argon-forty-display

./: HANDOFF.md  README.md  pyproject.toml
argon_oled/: __init__.py  app.py  battery.py  buttons.py  gps.py  hotspot.py  metrics.py  screens.py
docs/superpowers/plans/: 2026-05-03-battery-gauge-screen.md
docs/superpowers/specs/: 2026-05-03-battery-gauge-screen-design.md
scripts/: hello.py  probe_buttons.py  probe_x1207.py  render_screens.py
systemd/: argon-oled.service
