[project]
name = "argon-forty-display"
version = "0.1.0"
description = "Status-display application for the Argon Forty Industria OLED on Raspberry Pi 5, plus reverse-engineered hardware notes for its undocumented connector and buttons."
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "luma-oled>=3.15.0",
    "psutil>=7.2.2",
    "segno>=1.6.6",
]
